--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "debounce": "^1.2.1",
+    "firebase": "^8.4.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuefire": "^2.2.5",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -18,7 +22,7 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^4.1.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
