--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "todo-vuejs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.6.5",
-    "debounce": "^1.2.1",
-    "firebase": "^8.4.2",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuefire": "^2.2.5",
-    "vuex": "^3.4.0"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "^4.1.1",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
-  }
+    "name": "todo-vuejs",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint",
+        "deploy": "npm run build && npx firebase deploy"
+    },
+    "dependencies": {
+        "bootstrap-vue": "^2.21.2",
+        "core-js": "^3.6.5",
+        "debounce": "^1.2.1",
+        "firebase": "^8.4.2",
+        "firebase-tools": "^9.11.0",
+        "vue": "^2.6.11",
+        "vue-router": "^3.2.0",
+        "vuefire": "^2.2.5",
+        "vuex": "^3.4.0"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "~4.5.0",
+        "@vue/cli-plugin-eslint": "~4.5.0",
+        "@vue/cli-plugin-router": "~4.5.0",
+        "@vue/cli-plugin-vuex": "~4.5.0",
+        "@vue/cli-service": "^4.1.1",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^6.7.2",
+        "eslint-plugin-vue": "^6.2.2",
+        "vue-template-compiler": "^2.6.11"
+    }
 }
